--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,9 +1,25 @@
-<mat-form-field>
+<div id="chartContainer" style="width:100%; height:400px;"></div>
+
+
+<mat-form-field style="height:10px">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort>
+    <!--selection-->
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef [ngClass]="'selectionWidthClass'">
+            <button mat-raised-button (click)="clearAll()">Clear</button>
+        </th>
+        <td mat-cell *matCellDef="let row" [ngClass]="'selectionWidthClass'">
+          <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? toggleRow(row) : null"
+                        [checked]="selection.isSelected(row)"
+                        [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+    </ng-container>
     <!--icon-->
     <ng-container matColumnDef="icon">
         <th mat-header-cell *matHeaderCellDef>Icon</th>
@@ -41,6 +57,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
 </table>
-<mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+<mat-paginator [pageSizeOptions]="[6, 10, 25, 100]"></mat-paginator>
