--- a/src/app/topbanner/topbanner.component.html
+++ b/src/app/topbanner/topbanner.component.html
@@ -14,6 +14,8 @@
     <div class="tab"></div>
     <span [routerLink]="['/position']" class="toolbar-button" *ngIf="checkLoggedIn()">Positions</span>
     <div class="spacer"></div>
+    <span [routerLink]="['/twitter']" class="toolbar-button">Twitter</span>
+    <div class="tab"></div>
     <span [routerLink]="['/news']" class="toolbar-button">News</span>
     <div class="tab"></div>
     <span [routerLink]="['/contact']" class="toolbar-button">Contact</span>
