--- a/src/app/spread/spread.component.html
+++ b/src/app/spread/spread.component.html
@@ -1,4 +1,4 @@
-<h1>Flipping</h1>
+<mat-card-title>Flipping</mat-card-title>
 <button mat-button (click)="createSpread()">Enter Flip</button>
 <mat-form-field style="height:10px">
     <mat-label>Filter</mat-label>
