--- a/src/app/topbanner/topbanner.component.html
+++ b/src/app/topbanner/topbanner.component.html
@@ -19,6 +19,7 @@
     <span [routerLink]="['/news']" class="toolbar-button">News</span>
     <div class="tab"></div>
     <span [routerLink]="['/contact']" class="toolbar-button">Contact</span>
+    <div class="tab"></div>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>more_vert</mat-icon>
     </button>
