--- a/src/app/trade/trade.component.html
+++ b/src/app/trade/trade.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list cols="3">
-    <mat-grid-tile *ngFor="let cellId of [0,1,2,3,4,5]" (click)="updateTradeDialog(cellId)">
+<mat-grid-list cols="3" rowHeight="11rem">
+    <mat-grid-tile *ngFor="let cellId of [0,1,2,3,4,5,6]" (click)="updateTradeDialog(cellId)">
         <div *ngIf="!trades[cellId]">
             <button mat-fab (click)="createTradeDialog(cellId, 'Buy')">
                 <mat-icon>arrow_downward</mat-icon>Buy
@@ -11,12 +11,13 @@
         <div *ngIf="trades[cellId]">
             <table>
                 <td>
-                    <img src="{{trades[cellId].icon}}" width="50px" />
+                    
                 </td>
                 <td>
                     <table>
                         <tr>
-                            <h2>{{trades[cellId].buySell}}</h2>
+                            <td><img src="{{trades[cellId].icon}}" width="50px" /></td>
+                            <td>{{trades[cellId].buySell}}</td>
                         </tr>
                         <tr>
                             <td>Name:</td>
@@ -37,7 +38,7 @@
                     </table>
                 </td>
             </table>
-            <table class="mt-5" width="100%">
+            <table width="100%">
                 <tr>
                     <td>Current Status:</td>
                 </tr>
