--- a/src/app/topbanner/topbanner.component.html
+++ b/src/app/topbanner/topbanner.component.html
@@ -13,6 +13,8 @@
     <span [routerLink]="['/history']" class="toolbar-button" *ngIf="checkLoggedIn()">History</span>
     <div class="tab"></div>
     <span [routerLink]="['/position']" class="toolbar-button" *ngIf="checkLoggedIn()">Positions</span>
+    <div class="tab"></div>
+    <span [routerLink]="['/jobs']" class="toolbar-button" *ngIf="checkLoggedIn()">Jobs</span>
     <div class="spacer"></div>
     <span [routerLink]="['/twitter']" class="toolbar-button">Twitter</span>
     <div class="tab"></div>
