--- a/src/app/job-status-graph/job-status-graph.component.html
+++ b/src/app/job-status-graph/job-status-graph.component.html
@@ -1,3 +1,7 @@
-<p>job-status-graph works!</p>
-
-<div id="graph" style="text-align: center;"></div>
+<div class="container-fluid">
+    <div class="row">
+    <div class="col-11">
+        <div id="graph" class="graph" style="text-align:center; align-content: center;"></div>
+    </div>
+</div>
+</div>
